--- a/less/about-page.less
+++ b/less/about-page.less
@@ -1,8 +1,12 @@
 // about page
 
 .about-page {
-    .flex(@justify: center);
+    .flex(@direction: column; @justify: center);
     height: 100vh;
+
+    h1 {
+        margin-bottom: 5rem;
+    }
 }
 
 .about-page .contact-card {
