--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,7 +10,7 @@
 }
 
 // button
-.button(@btn-bg-clr: @theme; @btn-font-clr: white; @btn-bg-per: 75%;) {
+.button(@btn-bg-clr: white; @btn-font-clr: @theme; @btn-bg-per: 75%;) {
     padding: 1.5rem 3rem;
     border: 2px solid rgba(0, 0, 0, 50%);
     border-radius: .6rem;
