--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,10 @@
 .navbar {
     .flex();
 
+    @media @mobile {
+        flex-direction: column;
+    }
+
     // text style
     color: @theme;
     text-decoration: none;
@@ -15,7 +19,11 @@
     border-bottom: 1px @gray solid;
 
     .navbar-container {
-        .flex()
+        .flex();
+
+        @media @mobile {
+            width: 100%;
+        }
     }
 
     .navbar-logo {
@@ -36,10 +44,25 @@
                 color: @theme;
                 text-decoration: none;
             }
+
+            @media @mobile {
+                border-bottom: 1px #999999 solid;
+                width: 100%;
+                padding: 1rem 0;
+                padding-left: 2rem;
+                margin: 0;
+
+                &:first-child {
+                    border-top: 1px #999999 solid;
+                    margin-top: 1rem;
+                }
+            }
         }
 
         @media @mobile {
             display: none;
+            flex-direction: column;
+            width: 100%;
         }
     }
 
